--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mysql2": "^3.5.1",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.6.1"
+    "routes": "^2.1.0",
+    "sequelize": "^6.32.1"
   }
 }
