--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mysql2": "^3.5.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "routes": "^2.1.0",
     "sequelize": "^6.32.1"
